# ksp

./: CMakeLists.txt  main  main.c  memory.c  memory.h  mknjvm  programInstructions.h  readProgram.c  readProgram.h
asm/: fib.asm  program2.asm  program3.asm
global/: opcodes.h  versionNumber.h
tests/: asf_rsfTest.asm  bigMultiplication.asm  brfTest1.asm  brfTest2.asm  brtTest1.asm  brtTest2.asm  equalsTest.asm  greaterEqualsTest.asm  greaterThanTest.asm  jumpTest.asm  lowerEqualsTest.asm  lowerThanTest.asm  notEqualsTest.asm
tests/bigint/: bigIntTestAdd.asm  bigIntTestDiv.asm  bigIntTestMod.asm  bigIntTestMul.asm  bigIntTestSub.asm
